--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./img/slide1.jpg" class="d-block w-100" alt="...">
+      <img src="slide1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="./img/slide2.jpg" class="d-block w-100" alt="...">
