--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       <img src="slide1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./img/slide2.jpg" class="d-block w-100" alt="...">
+      <img src="slide2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="slide3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
