--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
             Category
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+            <li><a class="dropdown-item" href="#">Grains and Cereals</a></li>
+            <li><a class="dropdown-item" href="#">Condiments and Sauces</a></li>
+            <li><a class="dropdown-item" href="#">Spices and Seasonings</a></li>
+            <li><a class="dropdown-item" href="#">Household and Cleaning Supplies</a></li>
             <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+             <li><a class="dropdown-item" href="#">Personal Care and Health Products</a></li>
+             <li><a class="dropdown-item" href="#">Snacks and Beverage</a></li>
+            <li><a class="dropdown-item" href="#">Dairy and Bakery</a></li>
           </ul>
         </li>
         <li class="nav-item">
